--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
    
     <title>Cine Flex</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
